<resources>
    <string name="app_name" translatable="false">QR Code Scanner &amp; Generator</string>
    <string name="Grant_Permission">Grant Permission</string>
    <string name="Please_grant_all_permissions">Please grant all permissions to access additional functionality.</string>
    <string name="Go_to_setting">Go to setting</string>
    <string name="Permission_is_denied">Permission is denied</string>
    <string name="Your_opinion_matter_to_us">Your Opinion Matter To Us!</string>
    <string name="If_you_enjoy_our">If you enjoy our QR Code Scanner &amp; Generator, would you mind rating us on the Google Play, then?</string>
    <string name="title_history">History</string>
    <string name="desc_history">Which QR code history do you need?</string>
    <string name="Writing_something">Writing something</string>
    <string name="not_now">Not now</string>
    <string name="The_best_we_can_get">The best we can get :)</string>
    <string name="Rate_Us">Rate Us</string>
    <string name="Please_feedback">Please feedback</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="_continue">Continue</string>
    <string name="this_app_needs_permissions_below_to_work_properly">This app needs permissions below to work properly</string>
    <string name="language">Language</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="no_internet">No internet</string>
    <string name="there_is_no_internet_connection_please_check_your_internet_connection">There is no internet connection! Please check your internet connection!</string>
    <string name="try_again">Try again</string>
    <string name="intro_desc_1">🚀 Scan QR Codes in a Flash</string>
    <string name="intro_content_1">Lightning-fast scanning that gets you where you want—instantly and accurately.</string>
    <string name="intro_desc_2">✏️ Make Your Own QR Code</string>
    <string name="intro_content_2">Turn links, text, and more into custom QR codes in seconds—it\'s that easy.</string>
    <string name="intro_desc_3">📲 Unlock Anything with a Scan</string>
    <string name="intro_content_3">Point, scan, and go—access websites, files, and info in a heartbeat.</string>
    <string name="customize_your_qr_code">🎨 Design Your QR, Your Way</string>
    <string name="personalize_your_qr_codes_with_colors_logos_and_styles">Add colors, logos, and style to make your QR codes truly yours.</string>
    <string name="create_qr_code">Create QR Code</string>
    <string name="suggest_for_you">Suggest for you</string>
    <string name="other">Other</string>
    <string name="home">Home</string>
    <string name="scanned">Scanned</string>
    <string name="created">Created</string>
    <string name="text">Text</string>
    <string name="text_demo">Text Demo</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="url">URL</string>
    <string name="wifi">Wi-Fi</string>
    <string name="wifi_create">Wifi</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="bar_code">Barcode</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="whats_app">WhatsApp</string>
    <string name="history">History</string>
    <string name="scan_result">Scan Result</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="settings">Settings</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound">Sound</string>
    <string name="open_url_setting">Open Url automatically</string>
    <string name="rate">Rate</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="align_the_qr_code_within_the_frame_to_scan">Position the QR code inside the frame to scan.</string>
    <string name="scan">Scan</string>
    <string name="batch">Batch</string>
    <string name="gallery">Gallery</string>
    <string name="password">Password</string>
    <string name="security">Security</string>
    <string name="website">Website</string>
    <string name="web_search">Web Search</string>
    <string name="open_url">Open URL</string>
    <string name="connect">Connect</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="send_email">Send Email</string>
    <string name="phone_number">Number</string>
    <string name="message">Message</string>
    <string name="send_sms">Send SMS</string>
    <string name="call_now">Call Now</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="position">Position</string>
    <string name="show_on_map">Show on map</string>
    <string name="name">Name</string>
    <string name="job_title">Job title</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="note">Note</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="are_you_want_to_delete_this">Are you sure you want to delete this result?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_successfully">Delete successfully!</string>
    <string name="permission_required">Permission Required!</string>
    <string name="this_app_need_read_images_permission_to_enhance_feature">This app need read images permission to enhance feature</string>
    <string name="this_app_need_external_storage_to_enhance_feature">This app need external permission to enhance feature</string>
    <string name="image_was_saved">Image was saved</string>
    <string name="file_path">File path</string>
    <string name="no_email_app_found">No email app found</string>
    <string name="unable_open_email_app">Unable to open email app</string>
    <string name="cant_open_message_app">Can\'t open message app!</string>
    <string name="cant_open_dial_app">Cant\'t open dial app</string>
    <string name="cant_open_map">Can\'t open map app</string>
    <string name="input_the_content_text">Enter the content to be encrypted.</string>
    <string name="create_qr">Create QR</string>
    <string name="please_enter_content">Please enter content</string>
    <string name="save_qr">Save QR</string>
    <string name="add_widget">Add Widget</string>
    <string name="result">Result</string>
    <string name="wi_fi_name">Wi-Fi name</string>
    <string name="input_the_wifi_name">Input the wifi name...</string>
    <string name="input_the_password">Input the password...</string>
    <string name="wifi_password_length_must_not_be_shorter_than_eight">Wifi password length must not be shorter than eight.</string>
    <string name="none">None</string>
    <string name="input_the_email_address">Input the email address...</string>
    <string name="subject">Subject</string>
    <string name="input_the_email_title">Input the email title</string>
    <string name="input_the_email_content">Input the email content</string>
    <string name="invalid_email">Invalid email format.</string>
    <string name="input_the_latitude">Input the latitude. Ex: -11.8793</string>
    <string name="input_the_longitude">Input the longitude. Ex: 12.121</string>
    <string name="phone_number_create">Phone number</string>
    <string name="input_the_company_name">Input the company name...</string>
    <string name="input_the_name">Input the name...</string>
    <string name="input_the_phone_number">Input the phone number...</string>
    <string name="input_the_job_title">Input the job title...</string>
    <string name="input_the_address">Input the address...</string>
    <string name="input_the_note">Input the note...</string>
    <string name="name_is_not_valid">Name is not valid</string>
    <string name="number_phone">Number phone</string>
    <string name="number">Number</string>
    <string name="input_the_message">Input the message...</string>
    <string name="this_code_is_not_supported">This code is not supportted.</string>
    <string name="need_12_char">Need 12 characters required</string>
    <string name="delete_all">Delete all</string>
    <string name="are_you_want_to_delete_all">Are you sure you want to delete all result?</string>
    <string name="scan_batch">Scan Batch</string>
    <string name="cant_find_code_in_image">Can\'t find code in image.</string>
    <string name="camera">Camera</string>
    <string name="storage">Storage</string>
    <string name="this_app_need_camera_permission_to_enhance_feature">This app need camera permission to enhance feature</string>
    <string name="cant_start_with_char_dot">Can\'t start with char \".\"</string>
    <string name="cant_have_more_than_one_char_minis">Can\'t have more than one char \"-\"</string>
    <string name="this_char_minus_must_be_first">\"-\" should be placed at the beginning</string>
    <string name="cant_have_more_than_one_char_dot">Can\'t have more than one char \".\"</string>
    <string name="thanks_for_your_rate">Thanks for your rate</string>
    <string name="exit">Exit</string>
    <string name="you_can_review_all_this_data_in_history_tab">You can review all this data in History tab?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="widged_pinned">Widget pinned. Go to home screen</string>
    <string name="cant_detect_code_in_image">Can\'t detect code in image</string>
    <string name="permission">Permission</string>
    <string name="invalid_url">URL is invalid</string>
    <string name="copy_to_clipboard">Copied to clipboard!</string>
    <string name="invalid_format">Invalid format</string>
    <string name="invalid_youtube_url">Invalid youtube URL</string>
    <string name="select_file">Select File</string>
    <string name="select_all">Select All</string>
    <string name="invalid_fb_url">Invalid facebook url</string>
    <string name="invalid_whatsapp_url">Invalid Whatsapp url</string>
    <string name="invalid_twitter_url">Invalid Twitter url</string>
    <string name="invalid_instagram_url">Invalid instagram url</string>
    <string name="wifi_password_must_not_be_contain_space">Wifi password must not be contain space</string>
    <string name="wifi_name_must_not_be_contain_space">Wifi name must not be contain space</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="add_widget_successfully">Add widget successfully!</string>
    <string name="exit_app">Exit app?</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="what_problems_do_you_encounter_during_use">What problems do you encounter during use?</string>
    <string name="not_much_more_useful_than_the_default_features">Not much more useful than the default features</string>
    <string name="explore">Explore</string>
    <string name="unresponsive_or_laggy">Unresponsive or Laggy</string>
    <string name="why_did_you_uninstall_the_app">Why did you\nuninstall the app?</string>
    <string name="don_t_uninstall_yet">Don’t uninstall yet</string>
    <string name="still_want_to_uninstall">Still want to uninstall</string>
    <string name="uninstall">Uninstall</string>
    <string name="please_enter_the_reason_why_you_uninstall_the_app_here">Please enter the reason why you uninstall the app here</string>
    <string name="welcome">Welcome</string>
    <string name="thank_you_for_choosing_us">Thank you for choosing us</string>
    <string name="get_start_now">Get start now</string>
</resources>