<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="18dp">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_back_white"
        app:tint="#1F1F29" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/be_vn_pro_medium"
        android:text="@string/what_problems_do_you_encounter_during_use"
        android:textColor="#1F1F29"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_background_home_not_select"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/be_vn_pro_regular"
            android:text="@string/not_much_more_useful_than_the_default_features"
            android:textColor="#1F1F29"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_explore"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_btn_gradient_16dp"
            android:ellipsize="end"
            android:fontFamily="@font/be_vn_pro_medium"
            android:gravity="center"
            android:paddingHorizontal="22dp"
            android:text="@string/explore"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_background_home_not_select"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/be_vn_pro_regular"
            android:text="@string/unresponsive_or_laggy"
            android:textColor="#1F1F29"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_try_again"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_btn_gradient_16dp"
            android:ellipsize="end"
            android:fontFamily="@font/be_vn_pro_medium"
            android:gravity="center"
            android:paddingHorizontal="22dp"
            android:text="@string/try_again"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/no_uninstall"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_btn_gradient"
        android:ellipsize="end"
        android:fontFamily="@font/be_vn_pro_medium"
        android:gravity="center"
        android:paddingHorizontal="22dp"
        android:text="@string/don_t_uninstall_yet"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/still_uninstall"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_btn_transparent"
        android:ellipsize="end"
        android:fontFamily="@font/be_vn_pro_medium"
        android:gravity="center"
        android:paddingHorizontal="22dp"
        android:text="@string/still_want_to_uninstall"
        android:textColor="#1F1F29"
        android:textSize="16sp" />
</LinearLayout>