<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/img_no_internet" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/no_internet"
        android:textColor="@color/color_2E2F3F"
        android:textSize="@dimen/_22ssp" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center_horizontal"
        android:text="@string/there_is_no_internet_connection_please_check_your_internet_connection"
        android:textColor="@color/color_636366"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/tv_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_next_action_scan"
        android:fontFamily="@font/be_vn_pro_semibold"
        android:gravity="center_horizontal"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />
</LinearLayout>