<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/view"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_4sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:elevation="0dp"
                app:cardBackgroundColor="#6B32F0"
                app:cardCornerRadius="@dimen/_3sdp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/be_vn_pro_medium"
                android:text="@string/exit_app"
                android:textColor="#1F1F29"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:ellipsize="marquee"
                android:fontFamily="@font/be_vn_pro_regular"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/are_you_sure_you_want_to_exit_the_app"
                android:textColor="#8E8E93"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_desc"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_positive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_yes"
                    android:fontFamily="@font/be_vn_pro_medium"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/tv_negative"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_no"
                    android:fontFamily="@font/be_vn_pro_medium"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>